--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,11 @@
 
 body {
     margin: 2vh 5vw;
-    font-family: Muli;
+    font-family: 'Muli', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Quicksand', sans-serif;
 }
 
 ul {
@@ -90,7 +94,7 @@ li {
     font-size: 16px;
     background-color: var(--main-color);
     background-image: url("../assets/search_icon.svg");
-    background-position: center; 
+    background-position: center;
     background-repeat: no-repeat;
     transition: width 0.4s ease-in-out;
     color:white;
@@ -98,7 +102,7 @@ li {
 
 .header__search input[type=text]:focus {
     width: 150px;
-    background-position: 10px center; 
+    background-position: 10px center;
     padding-left:30px;
 }
 
@@ -121,7 +125,7 @@ li {
     margin:2vh 0;
 }
 
-.intro__info h2 {
+.intro__info span {
     font-weight: bold;
     color: #6C6C6C;
     font-size: 1em;
@@ -174,7 +178,7 @@ li {
     left:0;
 }
 
-.ball__orange { 
+.ball__orange {
     width: 100%;
     padding-bottom:100%;
     background-color: var(--main-color);
