--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,10 @@
 :root {
     --color-bg: rgba(196, 196, 196, 0.08);
     --color-white: #fff;
+    --color-purple: #E350CB;
+    --color-box-shadow: rgba(0, 0, 0, 0.25);
+    --color-text-bold: #6C6C6C;
     --main-color:#F8A01C;
-    --purple: #E350CB;
     --yellow: #F8E71C;
     --green:#72BE65;
     --blue:#5385F7;
@@ -13,18 +15,33 @@
     --spacing-h2: 3vh;
 }
 
+/* Antialiasing */
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 body {
     margin: 2vh 0;
     background-color: var(--color-bg);
     font-family: 'Muli', sans-serif;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: 'Quicksand', sans-serif;
+    /* Reset header margins */
+    margin: 0;
 }
 
+h2 {
+    font-size: 46px;
+}
+
+/* Reset p styles */
 p {
     font-size: 18px;
+    margin: 0;
 }
 
 ul {
@@ -36,9 +53,17 @@ li {
     list-style: none;
 }
 
+/* Logo */
 .logo {
     width: 170px;
     height: 30px
+}
+
+/* Tag */
+.tag {
+    color: var(--color-purple);
+    font-weight: 700;
+    margin-bottom: 5px;
 }
 
 .header {
@@ -160,7 +185,7 @@ li {
 }
 
 .intro__link--action {
-    width:fit-content;
+    align-self: baseline;
     border: 1px solid var(--main-color);
     padding: 5px 10px;
     border-radius: 50px;
@@ -202,7 +227,7 @@ li {
 }
 
 .title__highlight {
-    color:var(--purple);
+    color:var(--color-purple);
 }
 
 .title__header {
@@ -321,7 +346,7 @@ li {
 .ball__purple {
     width: 30%;
     padding-bottom:30%;
-    background-color: var(--purple);
+    background-color: var(--color-purple);
     left: 10vw;
 }
 
@@ -333,13 +358,78 @@ li {
     transition: transform 5s linear;
 }
 
+/* Blog Showcase */
+.blog-showcase {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: var(--width-body);
+    margin: 130px auto;
+}
+
+.blog-showcase__header {
+    margin-bottom: var(--spacing-h2);
+}
+
+.blog-showcase__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-auto-rows: auto;
+    grid-column-gap: 60px;
+    grid-row-gap: 60px;
+    width: var(--width-content);
+}
+
+.blog-showcase__container {
+    background-color: var(--color-white);
+    box-shadow: 0px 4px 4px var(--color-box-shadow);
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+.blog-showcase__container img {
+    width: 100%;
+    height: 180px;
+}
+
+.blog-showcase__container__content {
+    padding: 15px;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.blog-showcase__container__content:before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--color-purple);
+    width: 3px;
+    height: 40%;
+    transition: height 0.5s;
+}
+
+.blog-showcase__container:hover .blog-showcase__container__content:before {
+    height: 100%;
+}
+
+.blog-showcase__container__content p {
+    font-weight: 700;
+    color: var(--color-text-bold);
+    line-height: 23px;
+}
+
+/* Footer */
 .footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--color-white);
     padding: 60px 0;
-    /* TODO: Remove this when above section is created */
     margin: 130px auto;
     width: var(--width-body);
 }
