--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,13 @@
     --color-bg: rgba(196, 196, 196, 0.08);
     --color-white: #fff;
     --color-purple: #E350CB;
+    --color-form-border: #CBCEDA;
     --color-box-shadow: rgba(0, 0, 0, 0.25);
     --color-text-bold: #6C6C6C;
-    --main-color:#F8A01C;
+    --color-blue:#5385F7;
+    --color-orange:#F8A01C;
     --yellow: #F8E71C;
     --green:#72BE65;
-    --blue:#5385F7;
     --intro-info-width: 30vw;
     --intro-image-width: 30vw;
     --width-body: 90vw;
@@ -30,17 +31,23 @@ body {
 h1,
 h2 {
     font-family: 'Quicksand', sans-serif;
-    /* Reset header margins */
+    font-weight: 500;
     margin: 0;
 }
 
+/* H2 Block */
 h2 {
     font-size: 46px;
 }
 
-/* Reset p styles */
+.h2--white {
+    color: white;
+}
+
+/* P Block */
 p {
     font-size: 18px;
+    line-height: 23px;
     margin: 0;
 }
 
@@ -51,6 +58,50 @@ ul {
 
 li {
     list-style: none;
+}
+
+/* Button */
+.button {
+    border: 1px solid var(--color-orange);
+    padding: 5px 10px;
+    border-radius: 50px;
+    text-decoration: none;
+    color: inherit;
+    font-family: inherit;
+    font-size: 18px;
+    line-height: 23px;
+    cursor: pointer;
+    transition:
+        background-color 0.5s ease,
+        color 0.5s ease;
+}
+
+.button:hover {
+    background-color:var(--color-orange);
+    color: var(--color-white);
+}
+
+.button--orange {
+    background-color: var(--color-orange);
+    color: var(--color-white);
+}
+
+/* Input */
+.input {
+    height: 100%;
+    background-color: transparent;
+    font-size: inherit;
+    line-height: inherit;
+    border: none;
+    color: var(--color-white);
+}
+
+.input::placeholder {
+    color: var(--color-white);
+}
+
+.input:focus {
+    outline: none;
 }
 
 /* Logo */
@@ -64,6 +115,7 @@ li {
     color: var(--color-purple);
     font-weight: 700;
     margin-bottom: 5px;
+    text-transform: uppercase;
 }
 
 .header {
@@ -93,14 +145,14 @@ li {
 }
 
 .header__link:hover {
-    color:var(--main-color);
+    color:var(--color-orange);
     cursor: pointer;
 }
 
 .header__link:after {
     content: "";
     position: absolute;
-    border-top: 1px solid var(--main-color);
+    border-top: 1px solid var(--color-orange);
     width: 0%;
     bottom:0;
     left:0;
@@ -112,7 +164,7 @@ li {
 }
 
 .header__link--action {
-    border: 1px solid var(--main-color);
+    border: 1px solid var(--color-orange);
     padding: 5px 10px;
     border-radius: 50px;
     transition: background-color 0.5s ease;
@@ -120,7 +172,7 @@ li {
 
 .header__link--action:hover {
     cursor: pointer;
-    background-color:var(--main-color);
+    background-color:var(--color-orange);
     color:white;
 }
 
@@ -136,7 +188,7 @@ li {
     box-sizing: border-box;
     border: none;
     font-size: 16px;
-    background-color: var(--main-color);
+    background-color: var(--color-orange);
     background-image: url("../assets/search_icon.svg");
     background-position: center;
     background-repeat: no-repeat;
@@ -184,19 +236,10 @@ li {
     width: 80%;
 }
 
-.intro__link--action {
+.intro__info .button {
     align-self: baseline;
-    border: 1px solid var(--main-color);
-    padding: 5px 10px;
-    border-radius: 50px;
-    transition: background-color 0.5s ease;
 }
 
-.intro__link--action:hover {
-    cursor: pointer;
-    background-color:var(--main-color);
-    color:white;
-}
 
 .intro__image {
     width:var(--intro-image-width);
@@ -276,9 +319,9 @@ li {
     margin:20px 0;
 }
 
-.feature__shape--blue {
-    background: var(--blue);
-    box-shadow: 0px 0px 20px 1px var(--blue);
+.feature__shape--color-blue {
+    background: var(--color-blue);
+    box-shadow: 0px 0px 20px 1px var(--color-blue);
 }
 
 .feature__shape--green {
@@ -290,23 +333,9 @@ li {
     box-shadow: 0px 0px 20px 1px var(--yellow);
 }
 .feature__shape--orange {
-    background: var(--main-color);
-    box-shadow: 0px 0px 20px 1px var(--main-color);
+    background: var(--color-orange);
+    box-shadow: 0px 0px 20px 1px var(--color-orange);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .ball__container {
     position: absolute;
@@ -338,7 +367,7 @@ li {
 .ball__orange {
     width: 100%;
     padding-bottom:100%;
-    background-color: var(--main-color);
+    background-color: var(--color-orange);
     left: -10vw;
     top: 10vh;
 }
@@ -356,6 +385,40 @@ li {
     padding-bottom:50%;
     background-color: var(--yellow);
     transition: transform 5s linear;
+}
+
+/* Newsletter */
+.newsletter {
+    width: var(--width-body);
+    margin: 130px auto;
+    background-color: var(--color-blue);
+    padding: 60px 0;
+}
+
+.newsletter__content {
+    width: var(--width-content);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.newsletter__content h2 {
+    margin-bottom: var(--spacing-h2);
+    text-align: center;
+}
+
+.newsletter__content form {
+    border: 2px solid var(--color-form-border);
+    width: 90%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.newsletter__content form .input {
+    flex-grow: 1;
 }
 
 /* Blog Showcase */
