create saving section

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body {
     margin: 2vh 0;
     background-color: var(--color-bg);
     font-family: 'Muli', sans-serif;
+    position:relative;
 }
 
 h1, h2 {
@@ -130,7 +131,7 @@ li {
     display: flex;
     justify-content: center;
     margin:20vh auto 0 auto;
-    max-width: 1200px;
+    width: var(--width-body);
 }
 
 .intro__info {
@@ -142,6 +143,10 @@ li {
 
 .intro__info * {
     margin:2vh 0;
+}
+
+.intro__info--saving * {
+    margin:0;
 }
 
 .intro__info span {
@@ -184,7 +189,7 @@ li {
     margin-top:var(--spacing-h2);
     align-items: center;
     margin: 0 auto;
-    max-width: 1200px;
+    width: var(--width-body);
     position:relative;
 }
 
@@ -203,6 +208,7 @@ li {
 
 .title__highlight {
     color:var(--purple);
+    font-weight: bold;
 }
 
 .title__header {
@@ -210,6 +216,7 @@ li {
     font-size:2em;
     max-width: 220px;
     text-align: center;
+    margin-bottom: var(--spacing-h2);
 }
 
 .feature__items {
@@ -269,6 +276,43 @@ li {
     box-shadow: 0px 0px 20px 1px var(--main-color);
 }
 
+.text--container {
+    position:relative;
+    height: 5em;
+}
+
+.text--saving {
+    position:absolute;
+    right:0;
+}
+
+.features--saving {
+    flex-direction: row;
+}
+
+.title__header--saving {
+    max-width:400px;
+    text-align: left;
+}
+
+.title--saving {
+    align-items: flex-start;
+}
+
+.intro__info--saving {
+    transform: translateX(20%);
+}
+
+.intro__info--saving .intro__link--action {
+    margin-top:var(--spacing-h2);
+}
+
+.intro__image--container {
+    background: rgba(248, 160, 28, 0.22);
+    border-radius: 9999px;
+    padding-bottom: 53px;
+    position: relative;
+}
 
 
 
@@ -310,6 +354,16 @@ li {
     left:0;
 }
 
+.ball--static {
+    position:absolute;
+    transition: transform 20s linear;
+    border-radius: 9999px;
+    z-index:-999;
+    margin: 0;
+    top:0;
+    left:0;
+}
+
 .ball__orange {
     width: 100%;
     padding-bottom:100%;
@@ -331,6 +385,13 @@ li {
     padding-bottom:50%;
     background-color: var(--yellow);
     transition: transform 5s linear;
+}
+
+.ball__green {
+    width: 25%;
+    padding-bottom:25%;
+    background-color: var(--green);
+    left: -30px;
 }
 
 .footer {
