--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
     --color-orange:#F8A01C;
     --color-yellow: #F8E71C;
     --color-green:#72BE65;
+    --color-divider:#c4c4c4;
     --intro-info-width: 30vw;
     --intro-image-width: 30vw;
     --width-body: 75vw;
@@ -61,6 +62,13 @@ li {
     list-style: none;
 }
 
+/* Divider */
+.divider {
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-divider);
+}
+
 /* Button */
 .button {
     border: 1px solid var(--color-orange);
@@ -85,6 +93,11 @@ li {
 .button--orange {
     background-color: var(--color-orange);
     color: var(--color-white);
+}
+
+.button--big {
+    padding: 20px 50px;
+    border-radius: 20px;
 }
 
 /* Input */
@@ -392,19 +405,6 @@ li {
     position: relative;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .ball__container {
     position: absolute;
 }
@@ -470,6 +470,69 @@ li {
     padding-bottom:25%;
     background-color: var(--green);
     left: -30px;
+}
+
+/* Plans */
+.plans {
+    width: var(--width-body);
+    margin: 130px auto;
+}
+
+.plans__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-auto-rows: auto;
+    grid-column-gap: 120px;
+    grid-row-gap: 120px;
+    width: var(--width-content);
+    margin: 0 auto;
+}
+
+.plans__plan-container {
+    background-color: var(--color-white);
+    box-shadow: 0px 4px 4px var(--color-box-shadow);
+    position: relative;
+    padding: 60px 60px 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 450px;
+    box-sizing: border-box;
+}
+
+.plans__plan-container .new-ball {
+    position: absolute;
+    top: -45px;
+    left: 5%;
+}
+
+.plans__plan-container h2 {
+    position: absolute;
+    top: -44px;
+    left: 0;
+    right: 10%;
+    text-align: center;
+    z-index: 1;
+}
+
+.plans__plan-container ul {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    max-width: 90%;
+}
+
+.plans__plan-container li {
+    width: 50%;
+    text-align: center;
+}
+
+.plans__plan-container .button {
+    position: absolute;
+    bottom: -30px;
 }
 
 /* Newsletter */
@@ -642,20 +705,51 @@ li {
     background-color: var(--color-yellow);
 }
 
+.new-ball--yellow--glow {
+    box-shadow: 0px 0px 20px 1px var(--color-yellow);
+}
+
 .new-ball--orange {
     background-color: var(--color-orange);
 }
+
+.new-ball--orange--glow {
+    box-shadow: 0px 0px 20px 1px var(--color-orange);
+}
+
 .new-ball--green {
     background-color: var(--color-green);
+}
+
+.new-ball--green--glow {
+    box-shadow: 0px 0px 20px 1px var(--color-green);
 }
 
 .new-ball--purple {
     background-color: var(--color-purple);
 }
 
+.new-ball--purple--glow {
+    box-shadow: 0px 0px 20px 1px var(--color-purple);
+}
+
+.new-ball--blue {
+    background-color: var(--color-blue);
+}
+
+.new-ball--blue--glow {
+    box-shadow: 0px 0px 20px 1px var(--color-blue);
+}
+
+
 .new-ball--s {
     height: 70px;
     width: 70px;
+}
+
+.new-ball--sm {
+    height: 90px;
+    width: 90px;
 }
 
 .new-ball--m {
