--- a/css/index.css
+++ b/css/index.css
@@ -13,9 +13,21 @@
     --color-divider:#c4c4c4;
     --intro-info-width: 30vw;
     --intro-image-width: 30vw;
+
     --width-body: 75vw;
     --width-content: 60vw;
+
     --spacing-h2: 3vh;
+
+    --breakpoint-mobile: 480px;
+}
+
+/* Media Queries */
+@media (max-width: 480px) {
+    :root {
+        --width-body: 90vw;
+        --width-content: 80vw;
+    }
 }
 
 /* Antialiasing */
@@ -30,7 +42,7 @@ body {
     font-family: 'Muli', sans-serif;
     position:relative;
     width: 100vw;
-    overflow-x: hidden;
+
 }
 
 body.modal--open {
@@ -38,8 +50,15 @@ body.modal--open {
     overflow: hidden;
 }
 
+body > *:not(.modal):not(.header) {
+    transition:
+        -webkit-filter 1s,
+        filter 1s;
+    filter: blur(0px);
+}
+
 body.modal--open > *:not(.modal):not(.header) {
-    filter: blur(2px);
+    filter: blur(5px);
 }
 
 h1,
@@ -72,6 +91,11 @@ ul {
 
 li {
     list-style: none;
+}
+
+/* Normalize */
+div, section, footer, header, dialog {
+    box-sizing: border-box;
 }
 
 /* Divider */
@@ -813,17 +837,21 @@ li {
     flex-direction: column;
     align-items: center;
     background-color: var(--color-white);
-    padding: 60px 0;
+    padding: 60px 20px;
     margin: 130px auto;
     width: var(--width-body);
     position: relative;
+    text-align: center;
+}
+
+.footer > *:not(.new-ball) {
+    position: relative;
+    z-index: 1;
 }
 
 .footer__content {
     margin: 30px 0;
     max-width: 530px;
-    position: relative;
-    z-index: 1;
 }
 
 .footer__social a {
@@ -864,6 +892,7 @@ li {
     opacity: 0;
     visibility: hidden;
     transition:opacity 0.5s;
+    border: none;
 }
 
 .modal[open] {
