--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@
     --width-content: 60vw;
 
     --spacing-h2: 3vh;
+    --spacing-section: 130px;
 
     --breakpoint-mobile: 480px;
 }
@@ -27,6 +28,8 @@
     :root {
         --width-body: 90vw;
         --width-content: 80vw;
+
+        --spacing-section: 65px;
     }
 }
 
@@ -672,7 +675,7 @@ div, section, footer, header, dialog {
 /* Plans */
 .plans {
     width: var(--width-body);
-    margin: 130px auto;
+    margin: var(--spacing-section) auto;
 }
 
 .plans__grid {
@@ -735,7 +738,7 @@ div, section, footer, header, dialog {
 /* Newsletter */
 .newsletter {
     width: var(--width-body);
-    margin: 130px auto;
+    margin: var(--spacing-section) auto;
     background-color: var(--color-blue);
     padding: 60px 0;
     position: relative;
@@ -790,10 +793,11 @@ div, section, footer, header, dialog {
     flex-direction: column;
     align-items: center;
     width: var(--width-body);
-    margin: 130px auto;
+    margin: var(--spacing-section) auto;
 }
 
 .blog-showcase__header {
+    text-align: center;
     margin-bottom: var(--spacing-h2);
 }
 
@@ -805,7 +809,29 @@ div, section, footer, header, dialog {
     grid-column-gap: 60px;
     grid-row-gap: 60px;
     width: var(--width-content);
+    transition: width 0.5s;
 }
+
+@media (max-width: 1000px) {
+    .blog-showcase__grid {
+        width: 100%;
+        grid-column-gap: 30px;
+    }
+}
+
+@media (max-width: 750px) {
+    .blog-showcase__grid {
+        grid-column-gap: 15px;
+    }
+}
+
+@media (max-width: 600px) {
+    .blog-showcase__grid {
+        grid-template-columns: 1fr;
+        width: var(--width-content);
+    }
+}
+
 
 .blog-showcase__container {
     background-color: var(--color-white);
@@ -856,7 +882,7 @@ div, section, footer, header, dialog {
     align-items: center;
     background-color: var(--color-white);
     padding: 60px 20px;
-    margin: 130px auto;
+    margin: var(--spacing-section) auto;
     width: var(--width-body);
     position: relative;
     text-align: center;
@@ -1095,7 +1121,7 @@ div, section, footer, header, dialog {
         right: 20px;
         z-index: 998;
     }
-    
+
     .header__nav--mobile:hover {
         cursor: pointer;
     }
@@ -1131,7 +1157,7 @@ div, section, footer, header, dialog {
     }
 
     .header__acc--mobile {
-        
+
         opacity:0;
         display: flex;
         flex-direction: column;
@@ -1158,8 +1184,5 @@ div, section, footer, header, dialog {
     .button--mobile {
         border-color: white;
     }
-
-    :root {
-        --width-body: 100vw;
-    }
 }
+
